Many Many things happenening, adding first block and registry things

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "0.01"
+version = "0.0.1"
 group = "nuke.darkness" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "darkness"
 
@@ -29,7 +29,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20161220"
+    mappings = "snapshot_20170206"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
@@ -66,7 +66,7 @@ dependencies {
 	// for api
     deobfCompile "mezz.jei:jei_1.11.2:4.2.10.250:api"
     // full mod for build/runtime
-	runtime "mezz.jei:jei_1.11.2:4.2.10.250"
+	// runtime "mezz.jei:jei_1.11.2:4.2.10.250"
 }
 
 processResources {
