--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ repositories {
 
 dependencies {  
     deobfCompile "mezz.jei:jei_1.11.2:4.3.1.257"
-    //compile 'com.github.Azanor:Baubles:master-SNAPSHOT'
+    compile 'com.github.Azanor:Baubles:master-SNAPSHOT'
     compile files('libs/')
 }
 
