--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ jdk:
 before_install:
  - chmod +x gradlew
 
-script: ./gradlew build
+install: "./gradlew setupCIWorkspace"
+
+script: 
+- travis_wait 100 ./gradlew build
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -14,3 +17,16 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+    
+deploy:
+  provider: releases
+  file_glob: true
+  api_key: $GITHUB_OAUTH
+  file: 
+  - "./build/libs/Darkness-*-*.jar"
+  - "./build/libs/Darkness-*-*-sources.jar"
+  skip_cleanup: true
+ on:
+    repo: Nuclearsmilz/Planar
+    tags: true
+    all_branches: true    
