--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,17 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 
+# Java runtime
 org.gradle.jvmargs=-Xmx3G
+
+# Forge
+mc_version=1.11.2
+forge_version=13.20.0.2304
+mappings_version=snapshot_20170525
+
+# Dependencies
+jei_version=4.3.6.280
+hwyla_version=1.8.13-B26
+
+# Darkness things
+mod_version=0.0.1
