added the master branch, duh, no fucking wonder it wasnt building

--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     
     compile 'com.github.Azanor:Baubles:master-SNAPSHOT'
     
-    compile 'com.github.Nuclearsmilz:Planar:-SNAPSHOT'
+    compile 'com.github.Nuclearsmilz:Planar:master-SNAPSHOT'
     
     compile files('libs/')
 }
