--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,14 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Forge
-mc_version=1.11.2
-forge_version=13.20.0.2315
-mappings_version=snapshot_20170612
+mc_version=1.12
+forge_version=14.21.0.2363
+mappings_version=snapshot_20170624
 
 # Dependencies
-jei_version=4.5.0.289
-hwyla_version=1.8.17-B31
+jei_version=4.7.0.67
+hwyla_version=1.8.18-B32
+baubles_version=ed229bf
 
-# Darkness things
-mod_version=0.0.1
+# Darkness
+mod_version=0.0.2
